fixed the lazy load and emergency