@@ -4,11 +4,11 @@ import com.shanalert.hospitalalert.dto.DoctorUpdateDto;
 import com.shanalert.hospitalalert.entity.Doctor;
 import com.shanalert.hospitalalert.entity.Hospital;
 import com.shanalert.hospitalalert.entity.User;
+import com.shanalert.hospitalalert.model.UserRole;
 import com.shanalert.hospitalalert.repository.DoctorRepository;
 import com.shanalert.hospitalalert.repository.HospitalRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -18,44 +18,63 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class DoctorService {
 
-    @Autowired
-    private DoctorRepository doctorRepository;
+    private final DoctorRepository doctorRepository;
+    private final HospitalRepository hospitalRepository;
+    private final UserService userService;
 
-    @Autowired
-    private HospitalRepository hospitalRepository;
-
-    @Lazy
-    @Autowired
-    private UserService userService;
-
-    @Transactional(readOnly = true)
-    public Page<Doctor> findAllPaged(Pageable pageable) {
-        log.info("Fetching paginated Doctors: Page {}, Size {}",
-                pageable.getPageNumber(), pageable.getPageSize());
-        return doctorRepository.findAll(pageable);
+    public DoctorService(
+            DoctorRepository doctorRepository,
+            HospitalRepository hospitalRepository,
+            @Lazy UserService userService
+    ) {
+        this.doctorRepository = doctorRepository;
+        this.hospitalRepository = hospitalRepository;
+        this.userService = userService;
     }
 
+    /**
+     * Fetches all users with DOCTOR role, then lazy-creates/syncs their Doctor profiles.
+     * This solves the issue where doctorRepository.findAll() only returns already-created doctor profiles.
+     */
+    @Transactional
+    public Page<Doctor> findAllPaged(Pageable pageable) {
+        log.info(
+                "Fetching paginated Doctor users: Page {}, Size {}",
+                pageable.getPageNumber(),
+                pageable.getPageSize()
+        );
+
+        return userService.findUsersByRole(UserRole.DOCTOR, pageable)
+                .map(user -> findById(user.getId()));
+    }
+
+    /**
+     * Gets a doctor profile by user ID.
+     * If the Doctor profile does not exist yet, it creates it from the User record.
+     */
     @Transactional
     public Doctor findById(UUID userId) {
-        // 1. Fetch Master Identity from User table
         User masterUser = userService.getById(userId);
 
-        // 2. Fetch existing or initialize a fresh profile (JIT Provisioning)
+        if (masterUser.getRole() != UserRole.DOCTOR) {
+            throw new IllegalStateException("User is not a doctor");
+        }
+
         Doctor doctor = doctorRepository.findById(userId)
                 .orElseGet(() -> {
                     log.info("Lazy initializing Doctor profile for user: {}", userId);
+
                     Doctor newDoctor = new Doctor();
                     newDoctor.setId(userId);
+
                     return newDoctor;
                 });
 
-        // 3. Sync core fields to ensure they mirror the User table
         syncUserFieldsToDoctor(masterUser, doctor);
 
         return doctorRepository.save(doctor);
@@ -63,26 +82,44 @@ public class DoctorService {
 
     @Transactional
     public Doctor updateDoctorProfile(UUID userId, DoctorUpdateDto dto, UUID actorId) {
-        Doctor existing = findById(userId); // Uses your JIT logic to fetch/sync
+        Doctor existing = findById(userId);
 
-        // 1. Update Identity Fields
         if (dto.firstName() != null) existing.setFirstName(dto.firstName());
         if (dto.lastName() != null) existing.setLastName(dto.lastName());
         if (dto.phoneNumber() != null) existing.setPhoneNumber(dto.phoneNumber());
         if (dto.gender() != null) existing.setGender(dto.gender());
 
-        // 2. Update Professional Fields
-        if (dto.medicalLicenseNumber() != null) existing.setMedicalLicenseNumber(dto.medicalLicenseNumber());
-        if (dto.specialization() != null) existing.setSpecialization(dto.specialization());
-        if (dto.qualifications() != null) existing.setQualifications(dto.qualifications());
-        if (dto.yearsOfExperience() != null) existing.setYearsOfExperience(dto.yearsOfExperience());
-        if (dto.department() != null) existing.setDepartment(dto.department());
-        if (dto.isAvailable() != null) existing.setIsAvailable(dto.isAvailable());
+        if (dto.medicalLicenseNumber() != null) {
+            existing.setMedicalLicenseNumber(dto.medicalLicenseNumber());
+        }
 
-        // 3. Update Hospital Associations (ManyToMany)
+        if (dto.specialization() != null) {
+            existing.setSpecialization(dto.specialization());
+        }
+
+        if (dto.qualifications() != null) {
+            existing.setQualifications(dto.qualifications());
+        }
+
+        if (dto.yearsOfExperience() != null) {
+            existing.setYearsOfExperience(dto.yearsOfExperience());
+        }
+
+        if (dto.department() != null) {
+            existing.setDepartment(dto.department());
+        }
+
+        if (dto.isAvailable() != null) {
+            existing.setIsAvailable(dto.isAvailable());
+        }
+
         if (dto.newHospitalId() != null) {
             Hospital hospital = hospitalRepository.findById(dto.newHospitalId())
                     .orElseThrow(() -> new EntityNotFoundException("Hospital not found"));
+
+            if (existing.getHospitals() == null) {
+                throw new IllegalStateException("Doctor hospitals list is not initialized");
+            }
 
             if (!existing.getHospitals().contains(hospital)) {
                 existing.getHospitals().add(hospital);
@@ -95,26 +132,71 @@ public class DoctorService {
         return doctorRepository.save(existing);
     }
 
+    /**
+     * Links a doctor user to a hospital.
+     * If doctor profile does not exist yet, it creates it.
+     */
     @Transactional
     public void linkUserToHospital(UUID userId, UUID hospitalId) {
         User user = userService.getById(userId);
+
+        if (user.getRole() != UserRole.DOCTOR) {
+            throw new IllegalStateException("Only users with DOCTOR role can be linked as doctors");
+        }
+
         Hospital hospital = hospitalRepository.findById(hospitalId)
                 .orElseThrow(() -> new EntityNotFoundException("Hospital not found"));
 
-        if (doctorRepository.existsById(userId)) {
-            throw new IllegalStateException("User is already assigned as a Doctor");
-        }
+        Doctor doctorProfile = doctorRepository.findById(userId)
+                .orElseGet(() -> {
+                    log.info("Creating Doctor profile for user: {}", userId);
 
-        Doctor doctorProfile = new Doctor();
-        doctorProfile.setId(user.getId());
+                    Doctor newDoctor = new Doctor();
+                    newDoctor.setId(user.getId());
+
+                    return newDoctor;
+                });
+
         syncUserFieldsToDoctor(user, doctorProfile);
 
-        // Initialize the collection and add the first hospital
-        // Ensure your Doctor entity has: private List<Hospital> hospitals = new ArrayList<>();
+        if (doctorProfile.getHospitals() == null) {
+            throw new IllegalStateException("Doctor hospitals list is not initialized");
+        }
+
+        if (doctorProfile.getHospitals().contains(hospital)) {
+            throw new IllegalStateException("Doctor is already linked to this hospital");
+        }
+
         doctorProfile.getHospitals().add(hospital);
 
         doctorRepository.save(doctorProfile);
-        log.info("Linked User {} as Doctor to Hospital {}", user.getEmail(), hospital.getName());
+
+        log.info(
+                "Linked User {} as Doctor to Hospital {}",
+                user.getEmail(),
+                hospital.getName()
+        );
+    }
+
+    @Transactional
+    public void unlinkDoctorFromHospital(UUID doctorId, UUID hospitalId) {
+        Doctor doctor = doctorRepository.findById(doctorId)
+                .orElseThrow(() -> new EntityNotFoundException("Doctor profile not found"));
+
+        Hospital hospital = hospitalRepository.findById(hospitalId)
+                .orElseThrow(() -> new EntityNotFoundException("Hospital not found"));
+
+        if (doctor.getHospitals() == null || !doctor.getHospitals().contains(hospital)) {
+            throw new IllegalStateException("Doctor is not linked to this hospital");
+        }
+
+        doctor.getHospitals().remove(hospital);
+
+        doctor.setUpdatedAt(LocalDateTime.now());
+
+        doctorRepository.save(doctor);
+
+        log.info("Unlinked Doctor {} from Hospital {}", doctorId, hospitalId);
     }
 
     @Transactional
@@ -122,34 +204,65 @@ public class DoctorService {
         if (!doctorRepository.existsById(userId)) {
             throw new EntityNotFoundException("Cannot remove: Doctor profile does not exist");
         }
+
         doctorRepository.deleteById(userId);
+
+        log.info("Removed Doctor profile for user {}", userId);
     }
 
-    /**
-     * Finds doctors by hospital ID and ensures their profiles are
-     * synced with the Master User data.
-     */
     @Transactional
     public List<Doctor> findByHospitalId(UUID hospitalId) {
-        List<Doctor> doctors = doctorRepository.findByHospitalId(hospitalId);
+        if (!hospitalRepository.existsById(hospitalId)) {
+            throw new EntityNotFoundException("Hospital not found");
+        }
 
-        return doctors.stream()
-                .map(doctor -> findById(doctor.getId())) // Re-uses JIT logic to sync fields
-                .collect(Collectors.toList());
+        return doctorRepository.findByHospitalId(hospitalId)
+                .stream()
+                .map(doctor -> findById(doctor.getId()))
+                .toList();
     }
 
     @Transactional
     public void deactivateProfile(UUID userId) {
-        doctorRepository.findById(userId).ifPresent(doctor -> {
-            log.info("Unlinking Doctor profile and clearing facility access for user: {}", userId);
-            doctor.getHospitals().clear(); // Removes all hospital associations
-            doctorRepository.save(doctor);
-        });
+        Doctor doctor = doctorRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("Doctor profile not found"));
+
+        log.info(
+                "Unlinking Doctor profile and clearing facility access for user: {}",
+                userId
+        );
+
+        if (doctor.getHospitals() != null) {
+            doctor.getHospitals().clear();
+        }
+
+        doctor.setUpdatedAt(LocalDateTime.now());
+
+        doctorRepository.save(doctor);
     }
 
-    /**
-     * Helper to keep Doctor and User data in sync
-     */
+    @Transactional(readOnly = true)
+    public boolean belongsToHospital(UUID doctorId, UUID hospitalId) {
+        if (doctorId == null) {
+            throw new IllegalStateException("Doctor ID is required");
+        }
+
+        if (hospitalId == null) {
+            throw new IllegalStateException("Hospital ID is required");
+        }
+
+        return doctorRepository.existsByIdAndHospitals_Id(doctorId, hospitalId);
+    }
+
+    @Transactional(readOnly = true)
+    public void validateDoctorHospitalAccess(UUID doctorId, UUID hospitalId) {
+        boolean belongsToHospital = belongsToHospital(doctorId, hospitalId);
+
+        if (!belongsToHospital) {
+            throw new IllegalStateException("Doctor does not belong to this hospital");
+        }
+    }
+
     private void syncUserFieldsToDoctor(User user, Doctor doctor) {
         doctor.setUsername(user.getUsername());
         doctor.setEmail(user.getEmail());
